feat: add silver jewelry brands and update AI filter

--- a/config.json.example
+++ b/config.json.example
@@ -209,6 +209,22 @@
         {
             "name": "Japan NT",
             "keywords": ["日本代表 ユニフォーム ヴィンテージ"]
+        },
+        {
+            "name": "Justin Davis",
+            "keywords": ["Justin Davis", "ジャスティンデイビス", "Justin Davis ring"]
+        },
+        {
+            "name": "A&G Rock Culture",
+            "keywords": ["A&G", "エーアンドジー", "A&G silver"]
+        },
+        {
+            "name": "Vintage Navajo Silver",
+            "keywords": ["Navajo silver", "ナバホ シルバー", "Indian Jewelry", "インディアンジュエリー", "sterling silver 925"]
+        },
+        {
+            "name": "Ideal Design / Other Silver",
+            "keywords": ["Idealism Sound", "イデアリズムサウンド", "Vintage Silver Ring", "ヴィンテージ シルバー リング", "925 ring"]
         }
     ]
 }
